--- a/SafeAirlines/Base.lproj/Main.storyboard
+++ b/SafeAirlines/Base.lproj/Main.storyboard
@@ -1,24 +1,151 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="frH-We-Nnz">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Tab Bar Controller-->
+        <scene sceneID="qwi-uw-Chk">
+            <objects>
+                <tabBarController id="frH-We-Nnz" sceneMemberID="viewController">
+                    <tabBar key="tabBar" alpha="0.59999999999999998" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="asE-V8-HbH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" red="0.37647058820000001" green="0.79607843140000001" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="7Zc-l8-hsZ" kind="relationship" relationship="viewControllers" id="KdE-ab-ycO"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="huF-m5-00w" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1042" y="125"/>
+        </scene>
+        <!--SafeAirlines-->
+        <scene sceneID="tBt-4w-Nl3">
+            <objects>
+                <navigationController id="7Zc-l8-hsZ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="SafeAirlines" image="airline_avatar" id="KTl-4C-6BK">
+                        <color key="badgeColor" red="0.37647058820000001" green="0.79607843140000001" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </tabBarItem>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kic-Lt-QvR">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" red="0.37647058820000001" green="0.79607843140000001" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="LMt-gH-nJq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wPe-2v-SSd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-362" y="125"/>
+        </scene>
+        <!--Home-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="HomePageController" customModule="SafeAirlines" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="y1t-ee-y5V">
+                                <rect key="frame" x="0.0" y="154" width="375" height="464"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gxU-sa-Qwa">
+                                <rect key="frame" x="237" y="162" width="130" height="30"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="130" id="qdu-gb-NK2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Take Me There!">
+                                    <color key="titleColor" red="0.37647058820000001" green="0.79607843140000001" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="actionButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7Mg-6y-jo5"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B8A-gB-bej">
+                                <rect key="frame" x="0.0" y="64" width="375" height="90"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Which airport are you going to? 🤔" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Xd5-FI-Y8y">
+                                        <rect key="frame" x="5" y="50" width="365" height="35"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="p0T-lr-RPu"/>
+                                        </constraints>
+                                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Which airport are you coming from? 🤔" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="v5a-hl-NAb">
+                                        <rect key="frame" x="5" y="5" width="365" height="35"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="XV8-Ow-RX2"/>
+                                        </constraints>
+                                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="v5a-hl-NAb" secondAttribute="trailing" constant="5" id="8aM-yh-U2q"/>
+                                    <constraint firstAttribute="bottom" secondItem="Xd5-FI-Y8y" secondAttribute="bottom" constant="5" id="CZ1-tD-Gza"/>
+                                    <constraint firstItem="Xd5-FI-Y8y" firstAttribute="height" secondItem="v5a-hl-NAb" secondAttribute="height" id="LMQ-Af-KRm"/>
+                                    <constraint firstItem="v5a-hl-NAb" firstAttribute="leading" secondItem="B8A-gB-bej" secondAttribute="leading" constant="5" id="Lbz-8a-u7W"/>
+                                    <constraint firstItem="Xd5-FI-Y8y" firstAttribute="leading" secondItem="B8A-gB-bej" secondAttribute="leading" constant="5" id="MRf-pA-fQR"/>
+                                    <constraint firstItem="Xd5-FI-Y8y" firstAttribute="width" secondItem="v5a-hl-NAb" secondAttribute="width" id="N2g-Sb-EXe"/>
+                                    <constraint firstItem="Xd5-FI-Y8y" firstAttribute="top" secondItem="v5a-hl-NAb" secondAttribute="bottom" constant="10" id="aFP-El-Cdy"/>
+                                    <constraint firstAttribute="height" constant="90" id="fiw-ph-gCq"/>
+                                    <constraint firstItem="v5a-hl-NAb" firstAttribute="top" secondItem="B8A-gB-bej" secondAttribute="top" constant="5" id="vzt-hT-lpx"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="y1t-ee-y5V" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="3Ft-N4-I0H"/>
+                            <constraint firstItem="y1t-ee-y5V" firstAttribute="top" secondItem="B8A-gB-bej" secondAttribute="bottom" id="Haw-Ni-L8K"/>
+                            <constraint firstItem="y1t-ee-y5V" firstAttribute="top" secondItem="gxU-sa-Qwa" secondAttribute="bottom" constant="-38" id="Iat-Zc-6vS"/>
+                            <constraint firstItem="B8A-gB-bej" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Kjd-Ma-hZT"/>
+                            <constraint firstItem="B8A-gB-bej" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="L14-8L-pZ3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="y1t-ee-y5V" secondAttribute="bottom" id="a9m-SR-lMS"/>
+                            <constraint firstItem="gxU-sa-Qwa" firstAttribute="leading" secondItem="y1t-ee-y5V" secondAttribute="trailing" constant="-138" id="cXR-N3-g1H"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Xd5-FI-Y8y" secondAttribute="trailing" constant="5" id="jEY-ot-edN"/>
+                            <constraint firstItem="y1t-ee-y5V" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="zJC-qV-FQb"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="SafeAirline" image="airline_avatar" id="T4d-Z6-BPs">
+                        <color key="badgeColor" red="0.37647058820000001" green="0.79607843140000001" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </tabBarItem>
+                    <navigationItem key="navigationItem" title="Home" id="mG7-p8-XkE"/>
+                    <connections>
+                        <outlet property="actionButtonOutlet" destination="gxU-sa-Qwa" id="LuT-iM-glt"/>
+                        <outlet property="airportsDisplay" destination="y1t-ee-y5V" id="D7Y-Wa-QbL"/>
+                        <outlet property="backGroundView" destination="B8A-gB-bej" id="mkW-2K-LTY"/>
+                        <outlet property="destinationAirport" destination="Xd5-FI-Y8y" id="PST-Fk-kzm"/>
+                        <outlet property="originAirport" destination="v5a-hl-NAb" id="N1d-T8-JnI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="364" y="146.17691154422789"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="airline_avatar" width="30" height="30"/>
+    </resources>
 </document>
