--- a/SafeAirlines/Base.lproj/Main.storyboard
+++ b/SafeAirlines/Base.lproj/Main.storyboard
@@ -62,20 +62,6 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="y1t-ee-y5V">
                                 <rect key="frame" x="0.0" y="154" width="375" height="464"/>
                             </mapView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gxU-sa-Qwa">
-                                <rect key="frame" x="237" y="162" width="130" height="30"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="130" id="qdu-gb-NK2"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Take Me There!">
-                                    <color key="titleColor" red="0.37647058820000001" green="0.79607843140000001" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="actionButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7Mg-6y-jo5"/>
-                                </connections>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B8A-gB-bej">
                                 <rect key="frame" x="0.0" y="64" width="375" height="90"/>
                                 <subviews>
@@ -86,7 +72,7 @@
                                             <constraint firstAttribute="height" constant="35" id="p0T-lr-RPu"/>
                                         </constraints>
                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Which airport are you coming from? 🤔" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="v5a-hl-NAb">
@@ -96,7 +82,7 @@
                                             <constraint firstAttribute="height" constant="35" id="XV8-Ow-RX2"/>
                                         </constraints>
                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                 </subviews>
@@ -113,16 +99,46 @@
                                     <constraint firstItem="v5a-hl-NAb" firstAttribute="top" secondItem="B8A-gB-bej" secondAttribute="top" constant="5" id="vzt-hT-lpx"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2mi-61-tu9">
+                                <rect key="frame" x="291" y="160" width="78" height="33"/>
+                                <color key="backgroundColor" red="0.37647058820000001" green="0.79607843140000001" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="33" id="2cb-2S-o7H"/>
+                                    <constraint firstAttribute="width" constant="78" id="f4a-Gh-F6A"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <state key="normal" title="Clear">
+                                    <color key="titleColor" red="1" green="0.29453803140000001" blue="0.2392998834" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="clearButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Kye-Fk-3F2"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gxU-sa-Qwa">
+                                <rect key="frame" x="205" y="160" width="78" height="33"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <state key="normal" title="GO!">
+                                    <color key="titleColor" red="0.37647058820000001" green="0.79607843140000001" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="actionButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7Mg-6y-jo5"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="y1t-ee-y5V" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="3Ft-N4-I0H"/>
+                            <constraint firstItem="2mi-61-tu9" firstAttribute="width" secondItem="gxU-sa-Qwa" secondAttribute="width" id="9Zm-oW-nq8"/>
                             <constraint firstItem="y1t-ee-y5V" firstAttribute="top" secondItem="B8A-gB-bej" secondAttribute="bottom" id="Haw-Ni-L8K"/>
-                            <constraint firstItem="y1t-ee-y5V" firstAttribute="top" secondItem="gxU-sa-Qwa" secondAttribute="bottom" constant="-38" id="Iat-Zc-6vS"/>
                             <constraint firstItem="B8A-gB-bej" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Kjd-Ma-hZT"/>
                             <constraint firstItem="B8A-gB-bej" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="L14-8L-pZ3"/>
+                            <constraint firstItem="2mi-61-tu9" firstAttribute="leading" secondItem="y1t-ee-y5V" secondAttribute="trailing" constant="-84" id="PpI-t5-pWa"/>
+                            <constraint firstItem="gxU-sa-Qwa" firstAttribute="top" secondItem="B8A-gB-bej" secondAttribute="bottom" constant="6" id="WIF-hI-AeH"/>
+                            <constraint firstItem="2mi-61-tu9" firstAttribute="top" secondItem="B8A-gB-bej" secondAttribute="bottom" constant="6" id="WRR-o9-YiW"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="y1t-ee-y5V" secondAttribute="bottom" id="a9m-SR-lMS"/>
-                            <constraint firstItem="gxU-sa-Qwa" firstAttribute="leading" secondItem="y1t-ee-y5V" secondAttribute="trailing" constant="-138" id="cXR-N3-g1H"/>
+                            <constraint firstItem="gxU-sa-Qwa" firstAttribute="height" secondItem="2mi-61-tu9" secondAttribute="height" id="edi-jY-s6d"/>
+                            <constraint firstItem="2mi-61-tu9" firstAttribute="leading" secondItem="gxU-sa-Qwa" secondAttribute="trailing" constant="8" id="eoL-cd-4JT"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Xd5-FI-Y8y" secondAttribute="trailing" constant="5" id="jEY-ot-edN"/>
                             <constraint firstItem="y1t-ee-y5V" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="zJC-qV-FQb"/>
                         </constraints>
@@ -136,6 +152,7 @@
                         <outlet property="actionButtonOutlet" destination="gxU-sa-Qwa" id="LuT-iM-glt"/>
                         <outlet property="airportsDisplay" destination="y1t-ee-y5V" id="D7Y-Wa-QbL"/>
                         <outlet property="backGroundView" destination="B8A-gB-bej" id="mkW-2K-LTY"/>
+                        <outlet property="clearButtonOutlet" destination="2mi-61-tu9" id="IOK-Hl-qoJ"/>
                         <outlet property="destinationAirport" destination="Xd5-FI-Y8y" id="PST-Fk-kzm"/>
                         <outlet property="originAirport" destination="v5a-hl-NAb" id="N1d-T8-JnI"/>
                     </connections>
